Fixed html-css page layout issues, refine css, make body & #app min-height 100dvh

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,11 +2,27 @@
 @import 'tailwindcss-primeui';
 @custom-variant dark (&:where(.yd-app-dark, .yd-app-dark *));
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 :root {
   font-size: 14px;
 }
 
+html {
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
+  min-height: 100dvh;
   font-family: 'Open Sans', sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -15,11 +31,19 @@ body {
 }
 
 #app {
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: 100vh;
   padding: 1rem;
+}
+
+#navbar {
+  flex: 0;
+}
+#home,
+#contact {
+  flex: 1;
 }
 
 .open-sans-regular {
